fixed spacing issue

--- a/forms/styles.css
+++ b/forms/styles.css
@@ -77,7 +77,7 @@
   }
 
   .legacy-form-row legend {
-    margin: 15px;
+    margin-bottom: 15px;
   }
 
   .legacy-form-row .radio-label {
